add views and ability to display them

--- a/views/home.html.twig
+++ b/views/home.html.twig
@@ -1,8 +1,21 @@
+<!DOCTYPE html>
 <html>
 <head>
-    <title>Word Matcher</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+  <title>Repeat Counter</title>
 </head>
-<body>
-    <h1>This website allows you to enter a word, then enter a list of words, and check how many times that word appears in the list.</h1>
-</body>
+    <body>
+      <div class="container">
+        <h1>This website allows you to enter a word, then enter a list of words, and check how many times that word appears in the list.</h1>
+        <br>
+        <form action="/result" method='post'>
+            <label for="word">Enter a word to be counted:</label>
+            <input type="text" id="word" name="word">
+            <label for="sentence">Enter a sentence, a paragraph, or just a list of words:</label>
+            <input type="text" id="sentence" name="sentence">
+
+          <button class="btn btn-success" type="submit">Count the repeat</button>
+        </form>
+      </div>
+    </body>
 </html>
