change form from post to get

--- a/views/home.html.twig
+++ b/views/home.html.twig
@@ -6,9 +6,9 @@
 </head>
     <body>
       <div class="container">
-        <h1>This website allows you to enter a word, then enter a list of words, and check how many times that word appears in the list.</h1>
+        <h3>This website allows you to enter a word, then enter a list of words, and check how many times that word appears in the list.</h3>
         <br>
-        <form action="/result" method='post'>
+        <form action="/result">
             <label for="word">Enter a word to be counted:</label>
             <input type="text" id="word" name="word">
             <label for="sentence">Enter a sentence, a paragraph, or just a list of words:</label>
