--- a/views/result.html.twig
+++ b/views/result.html.twig
@@ -5,6 +5,7 @@
   <title>Repeat Result</title>
 </head>
 <div class="container">
+  <h3> Your word was repeated this many times:
   <ul>
     <li>{{ result }}</li>
   </ul>
