--- a/views/result.html.twig
+++ b/views/result.html.twig
@@ -4,9 +4,12 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
   <title>Repeat Result</title>
 </head>
-<div class="container">
-  <h3> Your word was repeated this many times:
-  <ul>
-    <li>{{ result }}</li>
-  </ul>
-</div>
+<body>
+  <div class="container">
+    <h3> Your word was repeated this many times:
+    <ul>
+      <li>{{ result }}</li>
+    </ul>
+    <a href="/">Do it again</a>
+  </div>
+</body>
